# RS-Key

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/rsk-bip39/: Cargo.toml
crates/rsk-bip39/src/: kani.rs  lib.rs  tests.rs  wordlist.rs
crates/rsk-crypto/: Cargo.toml
crates/rsk-crypto/src/: aes.rs  aes_tests.rs  base64url.rs  base64url_kani.rs  base64url_tests.rs  chachapoly.rs  chachapoly_tests.rs  crc.rs  crc_tests.rs  des.rs  des_tests.rs  drbg.rs  drbg_tests.rs  hash.rs  hash_tests.rs  kdf.rs  kdf_tests.rs  lib.rs  mac.rs  mac_tests.rs  mldsa.rs  mldsa_tests.rs  mlkem.rs  mlkem_tests.rs  pinproto.rs  pinproto_tests.rs
crates/rsk-fido/: Cargo.toml  build.rs
crates/rsk-fido/src/: cbordec.rs  cert.rs  cert_tests.rs  clientpin.rs  clientpin_tests.rs  config.rs  config_tests.rs  consts.rs  cose.rs  credential.rs  credential_tests.rs  credmgmt.rs  credmgmt_tests.rs  ec.rs  ec_tests.rs  error.rs  getassertion.rs  getassertion_tests.rs  getinfo.rs  getinfo_tests.rs  hmacsecret.rs  hmacsecret_tests.rs  journal.rs  journal_tests.rs  keyderiv.rs  keyderiv_tests.rs  largeblobs.rs  largeblobs_tests.rs  lib.rs  makecredential.rs  makecredential_tests.rs  passkeys.rs  passkeys_tests.rs  reset.rs  reset_tests.rs  seed.rs  seed_tests.rs  selection.rs  selection_tests.rs  state.rs  (+5 more)
crates/rsk-fido/src/conformance/: clientpin.rs  config.rs  credmgmt.rs  credprotect.rs  errors.rs  extensions.rs  getassertion.rs  getinfo.rs  hmac.rs  largeblobs.rs  makecredential.rs  mod.rs  multialg.rs  pin.rs  reset.rs  selection.rs  u2f.rs
crates/rsk-fs/: Cargo.toml
crates/rsk-fs/src/: fs.rs  fs_kani.rs  fs_tests.rs  lib.rs  storage.rs
crates/rsk-mgmt/: Cargo.toml
crates/rsk-mgmt/src/: lib.rs  tests.rs
crates/rsk-mldsa/: Cargo.toml
crates/rsk-mldsa/src/: encode.rs  encode_tests.rs  lib.rs  ntt.rs  ntt_tests.rs  pack.rs  pack_tests.rs  params.rs  poly.rs  reduce.rs  reduce_tests.rs  round.rs  round_kani.rs  round_tests.rs  sample.rs  sample_tests.rs  sign.rs  sign_tests.rs  testutil.rs  testvectors.rs
crates/rsk-oath/: Cargo.toml
crates/rsk-oath/src/: kani.rs  lib.rs  tests.rs
crates/rsk-openpgp/: Cargo.toml
crates/rsk-openpgp/src/: consts.rs  dispatch_getdata_tests.rs  dobj.rs  dobj_tests.rs  files.rs  getdata.rs  getdata_tests.rs  importdata.rs  importdata_kani.rs  info.rs  info_tests.rs  init.rs  init_tests.rs  internalaut.rs  keypairgen.rs  keypairgen_tests.rs  keys.rs  keys_rsa_tests.rs  keys_tests.rs  keys_x25519_tests.rs  lib.rs  mse.rs  mse_tests.rs  pin.rs  pin_tests.rs  pso.rs  putdata.rs  putdata_tests.rs  select.rs  select_tests.rs  serial_identity_tests.rs  terminate.rs  terminate_tests.rs  tests.rs
crates/rsk-otp/: Cargo.toml
crates/rsk-otp/src/: hid.rs  hid_tests.rs  lib.rs  seal.rs  seal_kani.rs  seal_tests.rs  tests.rs  tests_support.rs  ticket.rs  ticket_tests.rs
crates/rsk-piv/: Cargo.toml
crates/rsk-piv/src/: auth.rs  files.rs  info.rs  info_tests.rs  kani.rs  keygen.rs  lib.rs  seal.rs  tests.rs  x509.rs
crates/rsk-rsa-asm/: Cargo.toml  build.rs
crates/rsk-rsa-asm/csrc/: LICENSE.txt  bignum_asm.S  bignum_config.h  bignum_high_level.c  bignum_high_level.h
crates/rsk-rsa-asm/src/: kani.rs  lib.rs  tests.rs
crates/rsk-sdk/: Cargo.toml  build.rs
crates/rsk-sdk/src/: apdu.rs  apdu_kani.rs  apdu_tests.rs  applet.rs  applet_tests.rs  confirm.rs  error.rs  lib.rs  sw.rs  tests.rs  tlv.rs  tlv_kani.rs  tlv_tests.rs
crates/rsk-sha512/: Cargo.toml
crates/rsk-sha512/src/: block.rs  lib.rs  tests.rs
crates/rsk-slip39/: Cargo.toml
crates/rsk-slip39/src/: kani.rs  lib.rs  tests.rs  wordlist.rs
crates/rsk-ui/: Cargo.toml
crates/rsk-ui/src/: font.rs  glyph.rs  glyph_data.rs  glyph_tests.rs  kani.rs  lib.rs  render.rs  render_tests.rs  settings_store.rs  settings_store_kani.rs  settings_store_tests.rs  tests.rs  theme.rs  touch.rs  touch_tests.rs
crates/rsk-ui/src/render/: applets.rs  audit.rs  backup.rs  boot.rs  ceremony.rs  home.rs  passkeys.rs  pin.rs  reset.rs  settings.rs
crates/rsk-usb/: Cargo.toml
crates/rsk-usb/src/: ccid.rs  ccid_kani.rs  ccid_tests.rs  ctaphid.rs  ctaphid_tests.rs  lib.rs  secure_pin.rs  secure_pin_kani.rs  secure_pin_tests.rs
docs/: SUMMARY.md  (+21 more)
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: ccid_handler.rs  core1.rs  display.rs  flash_storage.rs  handler.rs  led.rs  main.rs  otp_kbd.rs  otp_keys.rs  presence.rs  rescue_platform.rs  vendor.rs  worker.rs
firmware/src/display/: applets.rs  backup.rs  gates.rs  pin.rs  power.rs  presence.rs  settings.rs  status.rs  touch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aes_gcm.rs  apdu.rs  base64url.rs  ccid.rs  ccid_secure_pin.rs  chachapoly.rs  cross_applet.rs  ctaphid.rs  ctaphid_roundtrip.rs  display_label.rs  drbg.rs  fido_audit_journal.rs  fido_cbor.rs  fido_cred.rs  fido_cred_ext.rs  fido_cred_pqc.rs  fido_credmgmt.rs  fido_hmac_secret.rs  fido_largeblobs.rs  fido_session.rs  fido_u2f.rs  fido_vendor.rs  fs_meta.rs  fs_ops.rs  keydev_seal.rs  kv_durability.rs  mgmt_apdu.rs  mgmt_config.rs  mldsa_roundtrip.rs  mldsa_verify.rs  oath_apdu.rs  oath_otp_pin.rs  openpgp_apdu.rs  openpgp_ec_key.rs  openpgp_ecdh.rs  openpgp_import.rs  openpgp_key_load.rs  openpgp_rsa_sign.rs  otp_apdu.rs  otp_hid.rs  (+13 more)
fuzz/tests/: churn_compaction.rs  miri.rs
rsk-wipe/: Cargo.toml  README.md  build.rs  memory.x
rsk-wipe/src/: main.rs
tools/: pyproject.toml
tools/rsk/: __init__.py  __main__.py  audit.py  backup.py  ccid.py  common.py  ctaphid.py  fido.py  hw.py  inventory.py  led.py  lock.py  offboard.py  openpgp.py  otp.py  pair.py  reboot.py  secureboot.py  status.py  test_backup.py  test_common.py  test_ctaphid_find.py  test_hw.py  test_led.py  test_pair.py
tools/tui/: Cargo.toml
tools/tui/src/: actions.rs  app.rs  app_tests.rs  device.rs  device_tests.rs  input.rs  input_tests.rs  main.rs  main_tests.rs  model.rs  model_tests.rs  theme.rs  ui.rs  ui_tests.rs
(+119 files in other folders)
