[package]
name = "firmware"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

[dependencies]
# `executor-interrupt`: the high-priority InterruptExecutor that runs USB + the
# transports so they stay responsive (streaming keepalives) while the worker on
# the thread executor blocks in synchronous crypto / flash.
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { workspace = true, features = ["rp235xa", "time-driver", "critical-section-impl"] }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }
# Cross-executor handshake (Mutex/Signal) between the transports and the worker.
embassy-sync = { workspace = true }
# `'static` storage for the USB stack so the transports can be spawned on the
# interrupt executor.
static_cell = "2"
rsk-usb = { workspace = true }
rsk-sdk = { workspace = true }
rsk-fs = { workspace = true }
rsk-fido = { workspace = true }
rsk-openpgp = { workspace = true }
rsk-mgmt = { workspace = true }
rsk-oath = { workspace = true }
rsk-otp = { workspace = true }
rsk-piv = { workspace = true }
rsk-rescue = { workspace = true }
rsk-led = { workspace = true }
# The trusted-display UI model (screens, untrusted-string sanitizing, button
# hit-testing) + its ST7789 panel driver stack. All optional — pulled in only by
# the `display` feature, so a standard key without a screen never compiles any of
# it. mipidsi drives the panel; embedded-hal-bus wraps embassy-rp's SPI bus as the
# `SpiDevice` mipidsi wants; embedded-graphics is the shared `DrawTarget` vocabulary.
rsk-ui = { workspace = true, optional = true }
# On-device BIP-39 encode for the recovery-phrase reveal — display-only, so the seed→words
# conversion (and its wordlist) never reaches the standard key.
rsk-bip39 = { workspace = true, optional = true }
# On-device SLIP-39 Shamir-share encode for the recovery reveal — display-only, like rsk-bip39.
rsk-slip39 = { workspace = true, optional = true }
mipidsi = { workspace = true, optional = true }
embedded-graphics = { workspace = true, optional = true }
embedded-hal-bus = { workspace = true, optional = true }
rp-pac = { workspace = true }
rsk-crypto = { workspace = true }
# core1's prime search owns an IncrementalSieve per core, and the keygen-bench
# vendor command times the primitives directly.
rsk-rsa-asm = { workspace = true }
# Zeroize the transient TRNG seed/reseed buffers in `FidoRng` (workspace dep, already
# pulled by rsk-crypto — no new version).
zeroize = { workspace = true }

cortex-m-rt = "0.7"
# SCB::sys_reset for the warm-reboot path of the secure-reboot vendor command
# (already in the tree via embassy-rp; the BOOTSEL path uses embassy-rp rom_data).
cortex-m = "0.7"
panic-halt = "1"
smart-leds = "0.4"

# Heap for the OpenPGP RSA path: the `rsa` crate's big-integer arithmetic needs
# an allocator. FIDO and the rest of the device stay no-alloc — only RSA touches it.
embedded-alloc = "0.6"

# Flash key/value backend for rsk-fs::Storage. sequential-storage is async-first;
# embassy-rp's blocking Flash is adapted to async via embassy-embedded-hal's
# BlockingAsync (the futures resolve immediately — flash ops block the executor,
# the accepted RP2350 XIP-stall caveat).
sequential-storage = "8"
embassy-embedded-hal = { workspace = true }
# The async NorFlash traits (the same 0.4 sequential-storage uses) for `SharedFlash`,
# the adapter that lets the main + counter partitions share the one Flash peripheral.
embedded-storage-async = "0.4"

[features]
# Physical BOOTSEL touch for user presence is REQUIRED BY DEFAULT and is NOT a
# feature: the shipped firmware demands a touch for makeCredential / getAssertion
# / selection / reset / U2F and the OpenPGP UIF DOs with no flag needed. The
# automated test suites (python-fido2, Gnuk, the raw m* tools) can't press the
# button, so build the no-touch test image with `--features no-touch`, which
# auto-confirms presence. Never ship a no-touch build.
no-touch = []
# Advertise ML-DSA-44 in getInfo `algorithms` — OFF by default because shipped
# Firefoxes reject the whole getInfo on an unknown COSE id (see rsk-fido). The
# PQC capability works either way; this only changes the advertisement:
# `cargo build --release -p firmware --features advertise-pqc`.
advertise-pqc = ["rsk-fido/advertise-pqc"]
# FIPS-style policy profile, OFF by default (the default image is unchanged).
# Opt-in: `cargo build --release -p firmware --features fips-profile` bakes the
# locked algorithm policy into the image — and secure boot seals it there.
# What it locks: docs/guides/fips.md. A profile, not a FIPS validation.
fips-profile = ["rsk-fido/fips-profile", "rsk-piv/fips-profile"]
# Keygen microbenchmark vendor command (INS 0x13). Debug/measurement only —
# never ship it: it exposes a timing oracle over the primality primitives.
keygen-bench = []
# FIDO Conformance Tool build profile (see rsk-fido's feature docs): suppresses
# the EdDSA (-8) advertisement so the tool can verify every advertised algorithm.
# The shipping build advertises -8 (Windows WebAuthn / `ed25519-sk`). Build
# `--features fido-conformance` ONLY for the FIDO Conformance run; never ship.
fido-conformance = ["rsk-fido/fido-conformance"]
# Add the FIDO Conformance Tool's enterprise-attestation test RPID to the
# vendor-facilitated (type 1) EA list (see rsk-fido's feature docs). Pulls in
# `fido-conformance` transitively. Build `--features ea-conformance-rpid` ONLY for
# FIDO Conformance EA testing; never ship.
ea-conformance-rpid = ["rsk-fido/ea-conformance-rpid"]
# Require a touch on EVERY getAssertion (see rsk-fido's feature docs). OFF by
# default: the shipped build honors the platform's silent `up:false` pre-flight,
# so a WebAuthn login is a single touch. Build `--features strict-up` to demand a
# touch on every assertion (an allowList login then asks for two touches).
strict-up = ["rsk-fido/strict-up"]
# Ship with the CTAP 2.1 `alwaysUv` option enabled by default (see rsk-fido's feature
# docs): every makeCredential / getAssertion demands user verification out of the box,
# with no post-flash `ykman fido config toggle-always-uv`. OFF by default. Build
# `--features always-uv`. Set a PIN after flashing — with alwaysUv on and no PIN, FIDO
# operations return PUAT_REQUIRED until you do (the platform is prompted to set one).
# Still runtime-toggleable; an authenticatorReset returns it to this compiled default.
always-uv = ["rsk-fido/always-uv"]
# Trusted-display build for a screen+touch board (Waveshare RP2350-Touch-LCD-2.8):
# on-screen Approve/Deny showing the relying party, on-device PIN entry, lock, and
# settings. OFF by default and entirely `dep:`-gated, so a standard key without a
# screen compiles NONE of it — the shipped image is byte-identical (the gate
# asserts `rsk-ui` is absent from the default firmware dependency tree). Build the
# display flavor with `LED_KIND=none FLASH_SIZE=16M cargo build --release -p
# firmware --features display` (the panel is the status indicator, so there is no
# addressable LED, which also frees GPIO16 for the backlight).
display = ["dep:rsk-ui", "dep:rsk-bip39", "dep:rsk-slip39", "dep:mipidsi", "dep:embedded-graphics", "dep:embedded-hal-bus"]

[[bin]]
name = "firmware"
test = false
bench = false
