# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "rsk-bip39"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

# `cfg(kani)` guards the proof harnesses (set by `cargo kani`, unknown to rustc).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
# Only for the SHA-256 of the entropy (the BIP-39 checksum) — reuse the in-tree wrapper
# rather than add a new external crate to the trust base.
rsk-crypto = { workspace = true }
