[package]
name = "rsk-crypto"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

# Crypto surface over RustCrypto: hashes, HMAC/HKDF, CRC-32, base64url, AES
# CBC/CFB + AES-256-GCM, ChaCha20-Poly1305, PIN KDF, CTAP2 PIN protocol, PQC.
# Pure and host-testable — serial-hash / OTP / RNG are passed in by the caller.
[dependencies]
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
aes = { workspace = true }
des = { workspace = true }
cbc = { workspace = true }
cfb-mode = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
p256 = { workspace = true }
zeroize = { workspace = true }
ml-kem = { workspace = true }
# Stack-optimized ML-DSA (FIPS 204) — the ML-DSA-44 and -65 credential signing,
# re-exported below.
rsk-mldsa = { workspace = true }
